# beckn-deg-bot

./: .dockerignore  .env.example  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  oldtomlfile.txt  pyproject.toml
src/: app.py
src/config/: database.py
src/controllers/: ai_controllers.py  auth_controllers.py
src/middleware/: auth_middleware.py
src/models/: user.py
src/routes/: __init__.py  ai_routes.py  auth_routes.py  index.py
src/service/ai/: agents_and_tools.py  chat_history.py  prompts_and_model.py
src/service/beckn/: beckn_transaction.py
src/service/schemas/: product.py
src/utils/: auth.py
