[project]
name = "beckn-deg-bot"
version = "0.1.0"
description = "Beckn AI Agent for DEG"
authors = [
    {name = "shreyvishal",email = "shreya.vishal@eminds.ai"}
]
readme = "README.md"
requires-python = ">=3.12.4,<4"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.25,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
