[tool.poetry]
name = "beckn-deg-bot"
version = "0.1.0"
description = "Beckn AI Agent for DEG"
authors = ["shreyvishal <shreya.vishal@eminds.ai>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12.4,<4"
fastapi = ">=0.115.13,<0.116.0"
langchain = ">=0.3.26,<0.4.0"
langchain-openai = ">=0.3.25,<0.4.0"
uvicorn = ">=0.34.3,<0.35.0"
dotenv = ">=0.9.9,<0.10.0"
pymongo = ">=4.10.1,<5.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-multipart = ">=0.0.12,<1.0.0"
email-validator = ">=2.0.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
